updated logo size and footer padding

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 apps
             </span>
 
-            <span class="material-symbols-outlined">
+            <span class="material-symbols-outlined apps_icon">
                 account_circle
             </span>
         </div>
@@ -59,15 +59,37 @@
 
         <div class="language">
             <span>Google offered in: </span>
-            <span id="lang">Afrikaans</span>
-            <span id="lang">Sesotho</span>
-            <span id="lang">isiZulu</span>
-            <span id="lang">IsiXhosa</span>
-            <span id="lang">Setswana</span>
-            <span id="lang">Northern Sotho</span>
+            <span class="lang_id"><a href="#">Afrikaans</a>  <a href="#">Sesotho</a>  <a href="#">isiZulu</a>  <a href="#">isiXhosa</a>  <a href="#">Setswana</a>  <a href="#">Northern Sotho</a> </span> 
+            
         </div>
         <!--Search input Ends here-->
     </div>
     <!--Main Body Ends here-->
+    <!--FIRST FOOTER-->
+    <footer class="upper_footer">
+        South Africa
+    </footer>
+    <!--FIRST FOOTER ENDS HERE-->
+
+    <!--SECOND FOOTER-->
+    <footer class="footer_items">
+        <div class="left_footer">
+            <span>About</span>
+            <span>Advertising</span>
+            <span>business</span>
+            <span>How Search Works</span>
+        </div>
+        <div class="footer_center">
+            Carbon neutral since 2007
+        </div>
+        <div class="right_footer">
+            <span>Privacy</span>
+            <span>Terms</span>
+            <span>Settings</span>
+        </div>
+        
+    </footer>
+    <!--SECOND FOOTER ENDS HERE-->
+
 </body>
 </html>
